# python_labs

./: .coverage  README.md  pyproject.toml  students.csv
data/lab04/: check.csv  check_report_per_file.csv  check_report_total.csv  input01.txt  input02.txt  input03.txt
data/lab05/samples/: cities.csv  people.csv  people.json
data/lab06/samples/: text.txt
data/lab09/: students.csv
help/: README.md
src/: .coverage  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  06_full_part_time.py  07_shifr.py
src/lab01/: 02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06_full_part_time.py  07_shifr.py  README.md
src/lab01/01_greeting/: 01_greeting.py
src/lab01/05_initials_and_len/: 05_initials_and_len.py
src/lab02/: 01_arrays.py  02_matrix.py  03_tuples.py  README.md
src/lab03/: 1.py  README.md  extra_task.py  nor_tok_freq_top_n.py  text_freq.py
src/lab04/: 1.py  README.md  io_txt_csv.py  text_report.py
src/lab05/: README.md  csv_xlsx.py  json_csv.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  models.py  serialize.py  test.py
src/lab09/: README.md  group.py
src/lab10/: README.md  linked_list.py  structures.py
src/lib/: README.md  col_sums.py  count_freq.py  flatten.py  isInteger.py  linklist.py  min_max.py  pathProccesing.py  path_proccesing.py  row_sums.py  stack_queue.py  text_analizator.py  text_token.py  tokeniz.py  top_n.py  transpose.py  tuples_string.py  unique_sorted.py
src/lib/classes/: README.md  (+1 more)
tests/: README.md  test_json_csv.py  test_text.py
(+24 files in other folders)
